#/*****************************************************************
# * Copyright (C) 2017-2022 Robert Valler - All rights reserved.
# *
# * This file is part of the project: Communication platform
# *
# * This project can not be copied and/or distributed
# * without the express permission of the copyright holder
# *****************************************************************/

project(Autonomous)
cmake_minimum_required(VERSION 3.15.0)

#add_subdirectory(test)
add_subdirectory(ros/auto_node/)
